--- a/index.html
+++ b/index.html
@@ -6,12 +6,16 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>Ziemiņa.</title>
+        <title>Index</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
          <link rel="stylesheet" href="mansStils.css" >
     </head>
     <body>
+        
+        <a href="https://evelinaklusa.github.io/test/skola.html" target="_blank"> skola.html </a> <br> <br>
+        <a href="https://evelinaklusa.github.io/test/darbibas.html" target="_blank"> darbibas.html </a> <br> <br> <br> <br> <br> <br>
+        
         <h2> Ziemas izklaides dabā. </h2>
         <p> Ziema ir ne tikai ārkārtīgi skaists gadalaiks, 
             bet arī unikāls, – ir dažādi aktivitāšu veidi, 
